syntax = "proto3";

package farm.crop_management;

service CropManagement {
  rpc GetWaterLevel(WaterRequest) returns (WaterResponse) {} // Unary RPC for water level
  rpc MonitorTemperature(TempStreamRequest) returns (stream TemperatureResponse) {}  // Server streaming for temperature monitoring

}
// Request message for getting water level
message WaterRequest {
  string sensorId = 1; //Id of the water sensor
}

// Response message for water levels - string because it is passing back the formatted value
message WaterResponse {
  string level = 1; // water level 
}

// Request message for temp
message TempStreamRequest {
    string option = 1;  // Could be "average", "weekly", or "today"
} 

// Response message for temp value
message TemperatureResponse {
  float temperature = 1;
  int32 day = 2; // For weekly temperature
}

